# airflow_dbt

./: .gitignore
1_local_setup/: pyproject.toml
2_data_warehouse/airflow_with_dbt/: dbt_project.yml
2_data_warehouse/airflow_with_dbt/models/staging/: _stg__models.yml
3_airflow/: docker-compose.override.yml
